# casper

./: .gitignore  CMakeLists.txt  README.md
calibrations/camproj_calibration/: calibration.npz
calibrations/leap_calibration/: w2p.npy
include/: GLMhelpers.h  MidiControllerAPI.h  UnityPlugin.h  camera.h  canvas.h  cnpy.h  dear_widgets.h  diffuse.h  display.h  engine_state.h  fbo.h  game.h  gl_camera.h  grid.h  guess_animal_game.h  guess_char_game.h  guess_num_game.h  guess_pose_game.h  helpers.h  helpersCV.h  httplib.h  human_trial.h  image_process.h  kalman.h  leap.h  leapCPP.h  material.h  mesh.h  moving_least_squares.h  point_cloud.h  post_process.h  quad.h  queue.h  readerwritercircularbuffer.h  shader.h  skinned_model.h  skinned_shader.h  stdafx.h  stubs.h  text.h  (+4 more)
resource/: GenericHand.blend  GenericHand_fixed_weights_no_arm.fbx  GenericHand_fixed_weights_no_arm_new_uv2.fbx  GenericHand_fixed_weights_no_arm_uv3.fbx  GenericHand_fixed_weights_no_arm_uvgame.fbx  GenericHand_fixed_weights_no_arm_uvgame2.fbx  GenericHand_jfa2.blend  GenericHand_weights_warm.fbx  GenericHand_weights_woarm_uvgame.fbx  GenericHand_weights_woarm_uvgame1.fbx  GenericHand_weights_woarm_uvpolish.fbx  GenericHand_weights_woarm_uvshader.fbx  GuessCharGame_front.blend  GuessCharGame_palm.fbx  GuessNumGame.blend  GuessNumGame.fbx  GuessNumGame_old.blend  ShaderToy.fbx  UserStudy.fbx  UserStudy_old.blend  UserStudy_old.fbx  cube_test.blend  cube_test.fbx  cube_test_triangulated.fbx  guess_char_user_study_instructions.txt  hand.npy  jnd_user_study_instructions.txt  reconst.ply  sources.txt
resource/GenericHand/: material.lib
resource/calibrations/cam_calibration/: cam_calibration.npz
resource/calibrations/coaxial_calibration/: coax_user.npy
resource/calibrations/leap_calibration/: 2dpoints.npy  3dpoints.npy  c2w.npy  w2c.npy  w2c_user.npy
resource/models/: INFO.txt  hand_landmark_lite.onnx  palm_detection_lite.onnx
resource/recordings/all/: bones_left.npy  joints_left.npy  timestamps.npy
resource/recordings/all_10s/: bones_left.npy  joints_left.npy
resource/recordings/all_5s/: bones_left.npy  joints_left.npy  timestamps.npy
resource/recordings/bird/: bones_left.npy  bones_right.npy  joints_left.npy  joints_right.npy  timestamps.npy
resource/recordings/deformation/: bones_left.npy  joints_left.npy  timestamps.npy
resource/recordings/dog/: bones_right.npy  joints_right.npy  timestamps.npy
resource/recordings/game/: L.npy  fist.npy  ok.npy  one.npy  open_back.npy  open_front.npy  rock.npy  sgfg.2_bones_left.npy  sgfg.3_bones_left.npy  sgfg.6_bones_left.npy  sgfg.9_bones_left.npy  sgfg.a_bones_left.npy  shaka.npy  three.npy  thumbs_up.npy
resource/recordings/pointing/: bones_left.npy  joints_left.npy  timestamps.npy
resource/recordings/rabbit/: bones_left.npy  joints_left.npy  timestamps.npy
resource/recordings/rock/: bones_left.npy  joints_left.npy  timestamps.npy
resource/recordings/rotation/: bones_left.npy  joints_left.npy  timestamps.npy
resource/recordings/shaka/: bones_left.npy  joints_left.npy  timestamps.npy
resource/recordings/translation/: bones_left.npy  joints_left.npy  timestamps.npy
resource/recordings/translation1/: bones_left.npy  joints_left.npy  timestamps.npy
resource/recordings/translation2/: bones_left.npy  joints_left.npy  timestamps.npy
resource/recordings/translation_10s/: bones_left.npy  timestamps.npy
resource/sample_data/: sgfg.1_bones_left.npy  sgfg.1_joints_2d_left.npy  sgfg.1_joints_left.npy  sgfg.2_joints_2d_left.npy  sgfg.2_joints_left.npy  sgfg.3_joints_2d_left.npy  sgfg.3_joints_left.npy  sgfg.4_bones_left.npy  sgfg.4_joints_2d_left.npy  sgfg.4_joints_left.npy  sgfg.5_bones_left.npy  sgfg.5_joints_2d_left.npy  sgfg.5_joints_left.npy  sgfg.6_joints_2d_left.npy  sgfg.6_joints_left.npy  sgfg.7_bones_left.npy  sgfg.7_joints_2d_left.npy  sgfg.7_joints_left.npy  sgfg.8_bones_left.npy  sgfg.8_joints_2d_left.npy  sgfg.8_joints_left.npy  sgfg.9_joints_2d_left.npy  sgfg.9_joints_left.npy  sgfg.a_joints_2d_left.npy  sgfg.a_joints_left.npy  sgfg.b_bones_left.npy  sgfg.b_joints_2d_left.npy  sgfg.b_joints_left.npy  sgfg.c_bones_left.npy  sgfg.c_joints_2d_left.npy  sgfg.c_joints_left.npy
src/: MidiControllerAPI.cpp  SerialPort.cpp  SerialPort.h  UnityPlugin.cpp  UnityPlugin.h  benchmark.cpp  benchmark_download.cpp  benchmark_flow.cpp  calibration.cpp  calibration.py  cam.fs  camera.cpp  camera.h  canvas.cpp  chatgpt.py  coaxial.cpp  coaxial_calibration.cpp  dear_widgets.cpp  deformation_example.cpp  deformations.py  diffuse.cpp  diffuse_example.cpp  display.cpp  display.h  dyna_example.cpp  fbo.cpp  game.cpp  gl_camera.cpp  gl_camera.h  grid.cpp  guess_animal_game.cpp  guess_char_game.cpp  guess_num_game.cpp  guess_pose_game.cpp  helpers.cpp  human_trial.cpp  image_process.cpp  interactive_deformation.py  kalman.cpp  kalman_example.cpp  (+31 more)
src/cuda/: add.cu  copyKernel.cu  cuda2gl.cu
src/shaders/: NN_shader.fs  bake_proj_simple.fs  bake_proj_simple.vs  bake_skinned.vs  baking.fs  baking.vs  blur.fs  blur.vs  canvas.fs  canvas.vs  canvas_cuda.fs  color_by_texture.fs  color_by_texture.vs  color_by_vertex.fs  color_by_vertex.vs  coords.fs  coords.vs  debug.fs  debug.vs  debug2.fs  debug2.vs  fast_tracker.fs  grid_color.fs  grid_color.vs  grid_texture.fs  grid_texture.vs  jfa.fs  jfa.vs  jfa_init.fs  leap_undistort.fs  leap_undistort.vs  line_shader.fs  mask.fs  overlay.fs  overlay.vs  projector_only.fs  projector_only.vs  projector_shader.fs  projector_shader.vs  remap.fs  (+30 more)
unity_augmented_hands/: UpgradeLog.htm
unity_augmented_hands/Assets/: render_texture.renderTexture
unity_augmented_hands/Assets/Materials/: render_texture.mat
unity_augmented_hands/Assets/Scenes/: SampleScene.unity
unity_augmented_hands/Assets/Scripts/: CircularObjectBuffer.cs  PluginImport.cs
unity_augmented_hands/ProjectSettings/: PackageManagerSettings.asset  ProjectSettings.asset
